# boringssl

./: .clang-format  .gitignore  0001-Fix-bits-vs.-bytes-confusion-in-RSA-encryption.patch  API-CONVENTIONS.md  BREAKING-CHANGES.md  BUILD  BUILD.bazel  BUILDING  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  FUZZING.md  INCORPORATING.md  LICENSE  MODULE.bazel  OpenSSLConfig.cmake  PORTING.md  PrivacyInfo.xcprivacy  README.md  SANDBOXING.md  STYLE  STYLE.md  TODO  WORKSPACE  build-riscv-android.sh  build-riscv-x86_64.sh  build.json  buildbucket.config  codereview.settings  configs.bzl  cr-buildbucket.cfg  go.mod  go.sum  luci-notify.cfg  luci-scheduler.cfg  main.star  prefix.bzl  project.config  sources.cmake
crypto/chacha/: CMakeLists.txt  chacha.c  chacha_generic.c  chacha_test.cc  chacha_vec.c  chacha_vec_arm.S  chacha_vec_arm_generate.go  internal.h
crypto/chacha20poly1305/: CMakeLists.txt  internal.h  poly1305.c  poly1305_vec.c  poly1305_x86.c
crypto/ec/: CMakeLists.txt  built_in_curves.c  ec.c  ec.h  ec_asn1.c  ec_key.c  ec_montgomery.c  ec_test.c  ec_test.cc  ecp_nistz256.c  ecp_nistz256_table.h  example_mul.c  generate_built_in_curves.go  internal.h  oct.c  p224-64.c  p256-64.c  p256-x86_64.c  p256-x86_64.h  p256-x86_64_test.cc  simple.c  util-64.c  wnaf.c
crypto/fipsmodule/: CMakeLists.txt  FIPS.md  bcm.c  bcm_interface.h  break-fips-test.h  delocate.go  delocate.h  delocate.peg  delocate.peg.go  fips.c  fips_break_test.h  fips_shared_support.c  fork_detect.c  fork_detect.h  fork_detect_test.cc  inject-hash.go  module_load_test.c  self_check.c
crypto/poly1305/: CMakeLists.txt  internal.h  poly1305.c  poly1305_arm.c  poly1305_arm_asm.S  poly1305_test.cc  poly1305_test.txt  poly1305_vec.c
crypto/rand/: CMakeLists.txt  ctrdrbg.c  ctrdrbg_test.cc  deterministic.c  fuchsia.c  internal.h  linux.c  rand.c  urandom.c  urandom_test.cc  windows.c
pki/: CMakeLists.txt  IMPORT  README.md  asn1_util.h  bound_verification_time.h  cert_error_id.h  cert_error_params.cc  cert_error_params.h  cert_errors.cc  cert_errors.h  cert_issuer_source.h  cert_issuer_source_static.cc  cert_issuer_source_static.h  cert_issuer_source_static_unittest.cc  cert_issuer_source_sync_unittest.h  cert_net_fetcher.h  cert_status_flags.h  certificate.cc  certificate_policies.cc  certificate_policies.h  certificate_test.cc  certificate_unittest.cc  check.h  common_cert_errors.cc  common_cert_errors.h  crl.cc  crl.h  crl_unittest.cc  encode_values.cc  encode_values.h  encode_values_unittest.cc  extended_key_usage.h  general_names.cc  general_names.h  import_spec.json  input.cc  input.h  input_unittest.cc  mock_signature_verify_cache.h  name_constraints.cc  (+71 more)
pki/fillins/: base64.cc  base64.h  check.h  file_util.cc  file_util.h  inet.h  ip_address.cc  ip_address.h  log.h  net_errors.h  openssl_util.cc  openssl_util.h  path_service.cc  path_service.h  string_util.cc  string_util.h  time.cc  time.h  utf_string_conversions.cc  utf_string_conversions.h
pki/patches/: 0001-Include-vector-in-parse_values.cc.patch  0001-Simplify-the-name-constraint-limit-to-resemble-Borin.patch  0002-Conditionalize-the-use-of-DVLOG-LOG-in-path-builder-.patch  0002-Include-base-check.h-in-parsed_certificate.patch  0002-disable-path-builder-tests-with-unsupported-dependen.patch  0003-Don-t-include-base-time-based-versions-in-BoringSSL-.patch  0003-Don-t-use-CHECK-and-friends-in-these-fuzz-tests.patch  0003-Include-base-check.h-in-cert_error_params.cc.patch  0003-Pick-up-some-DCHECK-s-I-missed-and-convert-to-BSSL_C.patch  0003-disable-path-builder-tests-with-unsupported-dependen.patch  0004-Don-t-include-base-time-based-versions-in-BoringSSL-.patch  0004-Include-vector-in-parse_values.cc.patch  0004-disable-path-builder-tests-with-unsupported-dependen.patch  0004-ensure-return-from-non-void-functions.patch  0004-include-cassert-when-assert-is-used-here.patch  0005-Avoid-making-a-copy-of-a-der-Input-which-upsets-comp.patch  0005-Include-base-check.h-in-parsed_certificate.patch  0005-Permit-paths-to-come-back-in-either-order-for-rollov.patch  0005-include-string_view-when-used.patch  0006-Avoid-passing-NULL-to-memcmp.patch  0006-Fix-unused-variables.patch  0006-disable-path-builder-tests-with-unsupported-dependen.patch  0006-include-cassert-when-needed.patch  0007-Allow-uninstantiated-gtest-for-CertIssuerSource.patch  0007-Remove-unreachable-code.-MSVC-does-not-like-this.patch  0007-add-braces-to-avoid-dangling-else-warnings.patch  0007-include-climits-for-CHAR_BIT.patch  0008-Permit-paths-to-come-back-in-either-order-for-rollov.patch  0008-avoid-shadowed-warnings-in-cert_errors.cc.patch  0008-don-t-use-a-reference-here-to-avoid-range-loop-const.patch  0009-Avoid-passing-NULL-to-memcmp.patch  0009-add-breaks-to-avoid-implicit-fallthrough-warnings.patch  0009-ensure-return-from-non-void-functions.patch  0010-disable-path-builder-tests-with-unsupported-dependen.patch  0010-fix-windows-dead-code.patch  0010-include-string_view-when-used.patch  0011-Fix-unused-variables.patch  0011-include-iterator-for-back_inserter.patch  0011-include-string_view-when-used.patch  0011-mark-unsused-variable-as-maybe_unused.patch  (+22 more)
rust/: CMakeLists.txt  Cargo.toml  README.md  README.txt  WORKSPACE  build.rs  err_compat.c  err_compat.h  rust_wrapper.c  rust_wrapper.h  wrapper.h
rust/bssl-crypto/: BUILD  BUILD.bazel  Cargo.toml  README.md  (+1 more)
ssl/: .#ssl_ecdh.c  CMakeLists.txt  custom_extensions.c  d1_both.c  d1_both.cc  d1_clnt.c  d1_lib.c  d1_lib.cc  d1_meth.c  d1_pkt.c  d1_pkt.cc  d1_srtp.c  d1_srtp.cc  d1_srvr.c  dtls_method.c  dtls_method.cc  dtls_record.c  dtls_record.cc  encrypted_client_hello.cc  extensions.cc  handoff.cc  handshake.cc  handshake_client.c  handshake_client.cc  handshake_server.c  handshake_server.cc  internal.h  libssl.pc.in  openssl.pc.in  s23_clnt.c  s23_srvr.c  s3_both.c  s3_both.cc  s3_cbc.c  s3_clnt.c  s3_enc.c  s3_lib.c  s3_lib.cc  s3_meth.c  s3_pkt.c  (+69 more)
tls/: CMakeLists.txt  ssl_clnt.c  ssl_lib.c  tls_client.c  tls_meth.c
trust_token/: CMakeLists.txt  clear.cc  internal.h  privacy_pass.cc  trust_token.cc  trust_token_test.cc
(+2554 files in other folders)
